--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ title: Samuel Garbo # your name (or website title) here
 logo: "/images/profile-270px.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
-  Fresh Junior web developer
+  Junior web developer
   <br><br>
-  Second description 
+  Fresh and excited junior web developer. Recently finished full stack development course at a talent accelerator program. Eager to develop and learn more. I am looking forward to new opportunities in the tech industry.  
   <br><br>
   <a href="https://www.linkedin.com/in/samuel-garbo/">View My LinkedIn Profile</a> 
   
