--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Junior web developer
   <br><br>
-  Fresh and excited junior web developer. Recently finished full stack development course at a talent accelerator program. Eager to develop and learn more. I am looking forward to new opportunities in the tech industry.  
+  Fresh and excited junior web developer. Recently finished a full stack development course at a talent accelerator program. Eager to develop and learn more. I am looking forward to new opportunities in the tech industry.  
   <br><br>
   <a href="https://www.linkedin.com/in/samuel-garbo/">View My LinkedIn Profile</a> 
   
